Bug 153855 Composer does not display a UTF-16 signature in the right way. (with fix UTF-8 BOM problem) r=jshin, sr=mscott